Version 3.1 Release Notes

This version is principally to fix all the blocking bug for a first stable release.
But there is also a few functional change listed here.

Integrated ASCOM Interface, can be used on Windows x64. 
Support for INDI 0.6
More command line options to allow automation from simple script.
Add Solar System symbols.
Change default color and star setting.
Allow to change bitmap stars image in photographic mode.
Possibility to make DSO not filled in graphic mode.
Add mode keyboard shortcut.
Right click on many button to directly access the corresponding setup form.
More DSS online server.
Update SAC database to version 8.1.
Many bug fix.

The full change log is here:
http://www.ap-i.net/mantis/changelog_page.php?project_id=1