@@ -14,6 +14,7 @@ Ajout de raccourcis clavier.
 Un clic droit sur les boutons permet d'accéder directement au réglages correspondant.
 Plus de serveur d'images DSS.
 Mise à jour de la base de donnée SAC à la version 8.1.
+Sur Mac OS X le répertoire utilisateur change de ~/.skychart vers ~/Library/Application Support/skychart
 Beaucoup de correction de bug.
 
 Le détail des changement est ici:
